--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
     />
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Document</title>
   </head>
@@ -88,7 +89,7 @@
 
     <div class="header-img">
       <!-- start search bar -->
-      <div class="search-bar">
+      <div class="search-bar" data-aos="fade-up">
         <div class="container">
           <div class="row">
             <div class="col-sm-12 text-right">
@@ -123,14 +124,22 @@
         <div class="swiper-container swiper-slider-card">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <div class="card">
-                <img src="./assets/images/elctron.png" alt="" />
+              <div class="card" data-aos="fade-up">
+                <img src="./assets/images/home.png" alt="" />
                 <p>اجهزة</p>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="swiper-slide">
-                <div class="card">
+                <div class="card" data-aos="fade-up">
+                  <img src="./assets/images/car.png" alt="" />
+                  <p>اجهزة</p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="swiper-slide">
+                <div class="card" data-aos="fade-up">
                   <img src="./assets/images/elctron.png" alt="" />
                   <p>اجهزة</p>
                 </div>
@@ -138,7 +147,7 @@
             </div>
             <div class="swiper-slide">
               <div class="swiper-slide">
-                <div class="card">
+                <div class="card" data-aos="fade-up">
                   <img src="./assets/images/elctron.png" alt="" />
                   <p>اجهزة</p>
                 </div>
@@ -779,6 +788,7 @@
     <script src="./assets/js/popper.min.js"></script>
     <script src="./assets/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./assets/js/main.js"></script>
   </body>
 </html>
