--- a/add-ads.html
+++ b/add-ads.html
@@ -65,10 +65,14 @@
           </label><br />
           <input id="file-input" type="file" />
         </div>
+        <div class="container">
+          <div class="descripe-add">
+            <input name="" id="" class="descripe-ad-input" placeholder="عنوان الاعلان" />
+          </div>
+        </div>
         <div class="ad-details">
           <div class="container">
-            <h6>تفاصيل الاعلان</h6>
-            <textarea name="" id="" cols="30" rows="6" placeholder="وصف الاعلان"></textarea>
+            <textarea name="" id="" cols="30" rows="6" placeholder="تفاصيل الاعلان"></textarea>
             <div class="form-group form-select">
               <label for="exampleFormControlSelect1">ما هي الفئة المنسبة لمنتجك؟</label>
               <i class="fas fa-calendar"></i>
@@ -77,7 +81,7 @@
                 <option>2</option>
               </select>
             </div>
-            <input class="input-number" type="number" name="" id="" /><span>ريال</span>
+            <input class="input-number" type="text" name="" id="" /><span>ريال</span>
             <ul class="list-unstyled ul-types">
               <li>
                 <label class="container">
@@ -152,11 +156,18 @@
               <button>اشترك الان</button>
             </form>
             <div class="social">
-              <span><a href="#"><i class="fab fa-linkedin-in"></i></a></span>
-              <span><a href="#"><i class="fab fa-instagram"></i></a></span>
-              <span><a href="#"><i class="fab fa-snapchat"></i></a></span>
-              <span><a href="#"><i class="fab fa-twitter"></i></a></span>
-              <span><a href="#"><i class="fab fa-facebook"></i></a></span>
+              <span
+                ><a href="#"><i class="fab fa-instagram"></i></a
+              ></span>
+              <span
+                ><a href="#"><i class="fab fa-snapchat"></i></a
+              ></span>
+              <span
+                ><a href="#"><i class="fab fa-twitter"></i></a
+              ></span>
+              <span
+                ><a href="#"><i class="fas  fa-envelope"></i></a
+              ></span>
             </div>
           </div>
         </div>
