--- a/agent.html
+++ b/agent.html
@@ -655,9 +655,9 @@
                   <div class="verfication-div">
                     <h6>على ماذا سيحصل العميل مقابل الدفع</h6>
                     <ul class="list-unstyled">
-                      <li>يحصل على علانة(الصح الزرقاء) مثل تويتر يكون بجوار الاسم وفي صورة الاعلان من الخارج.</li>
-                      <li>يستطيع اضافة 10 صور بدلا من 5.</li>
-                      <li>يستطيع اغلاق الردود على التعليقات.</li>
+                      <li>يحصل على علامة <i class="fas fa-check-circle"></i> يكون بجوار الاسم وفي صورة الاعلان من الخارج.</li>
+                      <li>يستطيع إضافة عدد 10 صور بدلاً من عدد 5 صور.</li>
+                      <li>يستطيع إغلاق الردود على التعلقات.</li>
                     </ul>
                     <form action="">
                       <div class="quta">
@@ -746,11 +746,18 @@
               <button>اشترك الان</button>
             </form>
             <div class="social">
-              <span><a href="#"><i class="fab fa-linkedin-in"></i></a></span>
-              <span><a href="#"><i class="fab fa-instagram"></i></a></span>
-              <span><a href="#"><i class="fab fa-snapchat"></i></a></span>
-              <span><a href="#"><i class="fab fa-twitter"></i></a></span>
-              <span><a href="#"><i class="fab fa-facebook"></i></a></span>
+              <span
+                ><a href="#"><i class="fab fa-instagram"></i></a
+              ></span>
+              <span
+                ><a href="#"><i class="fab fa-snapchat"></i></a
+              ></span>
+              <span
+                ><a href="#"><i class="fab fa-twitter"></i></a
+              ></span>
+              <span
+                ><a href="#"><i class="fas  fa-envelope"></i></a
+              ></span>
             </div>
           </div>
         </div>
