--- a/contact.html
+++ b/contact.html
@@ -134,9 +134,6 @@
               </form>
               <div class="social">
                 <span
-                  ><a href="#"><i class="fab fa-linkedin-in"></i></a
-                ></span>
-                <span
                   ><a href="#"><i class="fab fa-instagram"></i></a
                 ></span>
                 <span
@@ -146,7 +143,7 @@
                   ><a href="#"><i class="fab fa-twitter"></i></a
                 ></span>
                 <span
-                  ><a href="#"><i class="fab fa-facebook"></i></a
+                  ><a href="#"><i class="fas  fa-envelope"></i></a
                 ></span>
               </div>
             </div>
