--- a/deparment.html
+++ b/deparment.html
@@ -26,11 +26,18 @@
         </div>
         <div class="col-sm-12 col-lg-6">
           <div class="social">
-            <span><a href="#"><i class="fab fa-linkedin-in"></i></a></span>
-            <span><a href="#"><i class="fab fa-instagram"></i></a></span>
-            <span><a href="#"><i class="fab fa-snapchat"></i></a></span>
-            <span><a href="#"><i class="fab fa-twitter"></i></a></span>
-            <span><a href="#"><i class="fab fa-facebook"></i></a></span>
+            <span
+              ><a href="#"><i class="fab fa-instagram"></i></a
+            ></span>
+            <span
+              ><a href="#"><i class="fab fa-snapchat"></i></a
+            ></span>
+            <span
+              ><a href="#"><i class="fab fa-twitter"></i></a
+            ></span>
+            <span
+              ><a href="#"><i class="fas  fa-envelope"></i></a
+            ></span>
           </div>
         </div>
       </div>
