--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         <div class="row border-bottom">
           <div class="col-sm-12 col-lg-6">
             <div class="info">
-              <span><i class="fas fa-phone"></i>01098586783</span>
               <span
                 ><i class="fas fa-envelope" aria-hidden="true"></i>
                 infosite@mail.com</span
@@ -30,9 +29,6 @@
           </div>
           <div class="col-sm-12 col-lg-6">
             <div class="social">
-              <span
-                ><a href="#"><i class="fab fa-linkedin-in"></i></a
-              ></span>
               <span
                 ><a href="#"><i class="fab fa-instagram"></i></a
               ></span>
@@ -43,7 +39,7 @@
                 ><a href="#"><i class="fab fa-twitter"></i></a
               ></span>
               <span
-                ><a href="#"><i class="fab fa-facebook"></i></a
+                ><a href="#"><i class="fas fa-envelope"></i></a
               ></span>
             </div>
           </div>
@@ -94,18 +90,18 @@
           <div class="row">
             <div class="col-sm-12 text-right">
               <form>
-                <input type="text" placeholder="ابحث عن الموديل المطلوب" />
+                <input type="text" placeholder="ما الذي تريد البحث عنه" />
                 <img class="all-mark" src="./assets/images/all-mark.png" />
                 <select name="" id="">
-                  <option selected disabled> جميع الماركات</option>
+                  <option selected disabled>القسم الرئيسي</option>
                 </select>
-                <img class="car-select" src="./assets/images/car-select.png" />
+                <img class="car-select" src="./assets/images/all-mark.png" />
                 <select name="" id="">
-                  <option selected disabled> الموديل</option>
+                  <option selected disabled>القسم الفرعي</option>
                 </select>
                 <img class="place" src="./assets/images/place.png" />
                 <select name="" id="">
-                  <option selected disabled> كل المكان</option>
+                  <option selected disabled>جميع المدن</option>
                 </select>
                 <button class="btn text-white">
                   <i class="fas fa-search"></i>
@@ -752,9 +748,6 @@
               </form>
               <div class="social">
                 <span
-                  ><a href="#"><i class="fab fa-linkedin-in"></i></a
-                ></span>
-                <span
                   ><a href="#"><i class="fab fa-instagram"></i></a
                 ></span>
                 <span
@@ -764,7 +757,7 @@
                   ><a href="#"><i class="fab fa-twitter"></i></a
                 ></span>
                 <span
-                  ><a href="#"><i class="fab fa-facebook"></i></a
+                  ><a href="#"><i class="fas  fa-envelope"></i></a
                 ></span>
               </div>
             </div>
