--- a/showads.html
+++ b/showads.html
@@ -161,11 +161,8 @@
       <div class="social-media">
         <div class="container">
           <div class="social-border">
-            <span><a href="#"><i class="fas fa-envelope"></i></a></span>
             <span><a href="#"><i class="fas fa-heart"></i></a></span>
             <span><a href="#"><i class="fas fa-flag"></i></a></span>
-            <span><a href="#"><i class="fab fa-whatsapp"></i></a></span>
-            <span><a href="#"><i class="fab fa-twitter"></i></a></span>
           </div>
         </div>
       </div>
@@ -218,9 +215,6 @@
               </form>
               <div class="social">
                 <span
-                  ><a href="#"><i class="fab fa-linkedin-in"></i></a
-                ></span>
-                <span
                   ><a href="#"><i class="fab fa-instagram"></i></a
                 ></span>
                 <span
@@ -230,7 +224,7 @@
                   ><a href="#"><i class="fab fa-twitter"></i></a
                 ></span>
                 <span
-                  ><a href="#"><i class="fab fa-facebook"></i></a
+                  ><a href="#"><i class="fas  fa-envelope"></i></a
                 ></span>
               </div>
             </div>
