--- a/agent.html
+++ b/agent.html
@@ -663,7 +663,7 @@
                       <div class="quta">
                         <h6>باقات الحساب الموثق</h6>
                         <span class="quta-span">
-                          <p>لمدة شهور</p>
+                          <p>لمدة 6 شهور</p>
                           <h5>300</h5>
                           <h6>ريــــــــــــــال</h6>
                         </span>
