--- a/deparment.html
+++ b/deparment.html
@@ -19,26 +19,25 @@
       <div class="row border-bottom">
         <div class="col-sm-12 col-lg-6">
           <div class="info">
-            <span><i class="fas fa-phone"></i>01098586783</span>
             <span><i class="fas fa-envelope" aria-hidden="true"></i>
               infosite@mail.com</span>
           </div>
         </div>
         <div class="col-sm-12 col-lg-6">
           <div class="social">
-            <span
-              ><a href="#"><i class="fab fa-instagram"></i></a
-            ></span>
-            <span
-              ><a href="#"><i class="fab fa-snapchat"></i></a
-            ></span>
-            <span
-              ><a href="#"><i class="fab fa-twitter"></i></a
-            ></span>
-            <span
-              ><a href="#"><i class="fas  fa-envelope"></i></a
-            ></span>
-          </div>
+              <span
+                ><a href="#"><i class="fab fa-instagram"></i></a
+              ></span>
+              <span
+                ><a href="#"><i class="fab fa-snapchat"></i></a
+              ></span>
+              <span
+                ><a href="#"><i class="fab fa-twitter"></i></a
+              ></span>
+              <span
+                ><a href="#"><i class="fas fa-envelope"></i></a
+              ></span>
+            </div>
         </div>
       </div>
     </div>
@@ -619,11 +618,10 @@
               <button>اشترك الان</button>
             </form>
             <div class="social">
-              <span><a href="#"><i class="fab fa-linkedin-in"></i></a></span>
               <span><a href="#"><i class="fab fa-instagram"></i></a></span>
               <span><a href="#"><i class="fab fa-snapchat"></i></a></span>
               <span><a href="#"><i class="fab fa-twitter"></i></a></span>
-              <span><a href="#"><i class="fab fa-facebook"></i></a></span>
+              <span><a href="#"><i class="fas fa-envelope"></i></a></span>
             </div>
           </div>
         </div>
