--- a/my-inbox.html
+++ b/my-inbox.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/css/bootstrap-ar.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Document</title>
 </head>
@@ -57,66 +58,39 @@
     </div>
     <!-- end path -->
 
-    <!-- start uplad ads -->
-    <div class="upload-ads">
+    <!-- start my inpox -->
+    <div class="my-inbox">
         <div class="container">
-            <form action="">
-                <div class="image-upload">
-                    <label class="file-upload" for="file-input">
-            <i class="fas fa-camera"></i>
-            <p id="file-name"></p>
-          </label><br />
-                    <input id="file-input" type="file" />
-                </div>
-                <div class="container">
-                    <div class="descripe-add">
-                        <input name="" id="" class="descripe-ad-input" placeholder="عنوان الاعلان" />
-                    </div>
-                </div>
-                <div class="ad-details">
-                    <div class="container">
-                        <textarea name="" id="" cols="30" rows="6" placeholder="تفاصيل الاعلان"></textarea>
-                        <div class="form-group form-select">
-                            <label for="exampleFormControlSelect1">ما هي الفئة المنسبة لمنتجك؟</label>
-                            <i class="fas fa-calendar"></i>
-                            <select class="form-control" id="exampleFormControlSelect1">
-                <option selected disapled></i>اختر الفئة</option>
-                <option>2</option>
-              </select>
+            <div class="row">
+                <div class="col-sm-12 col-lg-12">
+                    <div class="card">
+                        <div class="card-header">
+                            سيارة جيلي 2014
                         </div>
-                        <input class="input-number" type="text" name="" id="" /><span>ريال</span>
-                        <ul class="list-unstyled ul-types">
-                            <li>
-                                <label class="container">
-                  <span class="type-word"><i class="fas fa-comment"></i>مراسلة</span>
-                  <input type="checkbox" checked="checked" />
-                  <span class="checkmark"></span>
-                </label>
-                            </li>
-                            <li>
-                                <label class="container">
-                  <span class="type-word"><i class="fab fa-whatsapp"></i>واتساب</span>
-                  <input type="checkbox" checked="checked" />
-                  <span class="checkmark"></span>
-                </label>
-                            </li>
-                            <li>
-                                <label class="container">
-                  <span class="type-word"><i class="fas fa-mobile"></i>اتصال</span>
-                  <input type="checkbox" checked="checked" />
-                  <span class="checkmark"></span>
-                </label>
-                            </li>
-                        </ul>
+                        <div class="card-body">
+                            <h5 class="card-title"><i class="fas fa-user"></i>الى ابو عبده</h5>
+                            <p class="card-text"><i class="fas fa-calendar"></i>منذ يوم امس</p>
+                            <a href="#" class="btn btn-danger"><i class="fas fa-trash"></i>حذف الرساله</a>
+                        </div>
                     </div>
                 </div>
-                <div class="button-submit">
-                    <button class="btn btn-submit-form" type="submit">نشر</button>
+                <!-- rebeat -->
+                <div class="col-sm-12 col-lg-12">
+                    <div class="card">
+                        <div class="card-header">
+                            يارس 2019
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title"><i class="fas fa-user"></i>الى عمر علي</h5>
+                            <p class="card-text"><i class="fas fa-calendar"></i>منذ يوم امس</p>
+                            <a href="#" class="btn btn-danger"><i class="fas fa-trash"></i>حذف الرساله</a>
+                        </div>
+                    </div>
                 </div>
-            </form>
+            </div>
         </div>
     </div>
-    <!-- end uplad ads -->
+    <!-- end my inpox -->
 
     <!-- start footer -->
     <footer class="pt-5 mt-5">
@@ -182,10 +156,12 @@
     </footer>
     <!-- end footer -->
 
+
     <script src="./assets/js/jquery-3.3.1.min.js"></script>
     <script src="./assets/js/popper.min.js"></script>
     <script src="./assets/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 
