--- a/mybrofile.html
+++ b/mybrofile.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/css/bootstrap-ar.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Document</title>
 </head>
@@ -41,7 +42,6 @@
         </div>
     </div>
     <!-- end navbar -->
-
     <!-- start path  -->
     <div class="path">
         <div class="container">
@@ -57,66 +57,35 @@
     </div>
     <!-- end path -->
 
-    <!-- start uplad ads -->
-    <div class="upload-ads">
+    <!-- start add ads -->
+    <div class="add-ads-add my-profile">
         <div class="container">
+            <h5>حسابي</h5>
             <form action="">
-                <div class="image-upload">
-                    <label class="file-upload" for="file-input">
-            <i class="fas fa-camera"></i>
-            <p id="file-name"></p>
-          </label><br />
-                    <input id="file-input" type="file" />
-                </div>
-                <div class="container">
-                    <div class="descripe-add">
-                        <input name="" id="" class="descripe-ad-input" placeholder="عنوان الاعلان" />
-                    </div>
-                </div>
-                <div class="ad-details">
-                    <div class="container">
-                        <textarea name="" id="" cols="30" rows="6" placeholder="تفاصيل الاعلان"></textarea>
-                        <div class="form-group form-select">
-                            <label for="exampleFormControlSelect1">ما هي الفئة المنسبة لمنتجك؟</label>
-                            <i class="fas fa-calendar"></i>
-                            <select class="form-control" id="exampleFormControlSelect1">
-                <option selected disapled></i>اختر الفئة</option>
-                <option>2</option>
-              </select>
-                        </div>
-                        <input class="input-number" type="text" name="" id="" /><span>ريال</span>
-                        <ul class="list-unstyled ul-types">
-                            <li>
-                                <label class="container">
-                  <span class="type-word"><i class="fas fa-comment"></i>مراسلة</span>
-                  <input type="checkbox" checked="checked" />
-                  <span class="checkmark"></span>
-                </label>
-                            </li>
-                            <li>
-                                <label class="container">
-                  <span class="type-word"><i class="fab fa-whatsapp"></i>واتساب</span>
-                  <input type="checkbox" checked="checked" />
-                  <span class="checkmark"></span>
-                </label>
-                            </li>
-                            <li>
-                                <label class="container">
-                  <span class="type-word"><i class="fas fa-mobile"></i>اتصال</span>
-                  <input type="checkbox" checked="checked" />
-                  <span class="checkmark"></span>
-                </label>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="button-submit">
-                    <button class="btn btn-submit-form" type="submit">نشر</button>
-                </div>
+                <input type="text" name="" id="" value="Omar">
+                <input type="password" name="" id="" placeholder="كلمة المرور القديمة">
+                <input type="password" name="" id="" placeholder="كلمة المرور الجديدة">
+                <input type="password" name="" id="" placeholder="اعادة كلمة المرور">
+                <input type="email" name="" id="" value="omarasmar9699@gmail.com">
+                <input type="text" name="" id="" value="01098586783">
+                <select name="" id="">
+          <option selected> الدولة </option>
+          <option> السعودية </option>
+          <option> الكويت </option>
+          <option> البحرين </option>
+          <option> الامارات </option>
+          <option> سلطة عمان </option>
+          <option> قطر </option>
+        </select>
+                <select name="" id="">
+          <option selected> المدينة </option>
+          <option> نجران </option>
+        </select>
+                <button class="btn mt-4" type="submit">تعديل</button>
             </form>
         </div>
     </div>
-    <!-- end uplad ads -->
+    <!-- end add ads -->
 
     <!-- start footer -->
     <footer class="pt-5 mt-5">
@@ -156,14 +125,10 @@
                             <button>اشترك الان</button>
                         </form>
                         <div class="social">
-                            <span><a href="#"><i class="fab fa-instagram"></i></a
-              ></span>
-                            <span><a href="#"><i class="fab fa-snapchat"></i></a
-              ></span>
-                            <span><a href="#"><i class="fab fa-twitter"></i></a
-              ></span>
-                            <span><a href="#"><i class="fas  fa-envelope"></i></a
-              ></span>
+                            <span><a href="#"><i class="fab fa-instagram"></i></a></span>
+                            <span><a href="#"><i class="fab fa-snapchat"></i></a></span>
+                            <span><a href="#"><i class="fab fa-twitter"></i></a></span>
+                            <span><a href="#"><i class="fas  fa-envelope"></i></a></span>
                         </div>
                     </div>
                 </div>
@@ -182,10 +147,12 @@
     </footer>
     <!-- end footer -->
 
+
     <script src="./assets/js/jquery-3.3.1.min.js"></script>
     <script src="./assets/js/popper.min.js"></script>
     <script src="./assets/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 
