--- a/edit-ads.html
+++ b/edit-ads.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/css/bootstrap-ar.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Document</title>
 </head>
@@ -57,66 +58,77 @@
     </div>
     <!-- end path -->
 
-    <!-- start uplad ads -->
-    <div class="upload-ads">
+    <!-- start edit ads -->
+    <div class="edit-ads">
         <div class="container">
-            <form action="">
-                <div class="image-upload">
-                    <label class="file-upload" for="file-input">
-            <i class="fas fa-camera"></i>
-            <p id="file-name"></p>
-          </label><br />
-                    <input id="file-input" type="file" />
-                </div>
-                <div class="container">
-                    <div class="descripe-add">
-                        <input name="" id="" class="descripe-ad-input" placeholder="عنوان الاعلان" />
-                    </div>
-                </div>
-                <div class="ad-details">
-                    <div class="container">
-                        <textarea name="" id="" cols="30" rows="6" placeholder="تفاصيل الاعلان"></textarea>
-                        <div class="form-group form-select">
-                            <label for="exampleFormControlSelect1">ما هي الفئة المنسبة لمنتجك؟</label>
-                            <i class="fas fa-calendar"></i>
+            <div class="row">
+                <div class="col-sm-12 col-lg-12">
+                    <form>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">عنوان الاعلان</label>
+                            <input type="text" class="form-control" id="exampleFormControlInput1" value="بلاي ستيشن4 للبيع" />
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlSelect1">القسم الرئيسي</label>
                             <select class="form-control" id="exampleFormControlSelect1">
-                <option selected disapled></i>اختر الفئة</option>
-                <option>2</option>
+                <option>الكترونيات</option>
+                <option>سيارات</option>
+                <option>حيوانات</option>
+                <option>اثاث</option>
+                <option>عقارات</option>
               </select>
                         </div>
-                        <input class="input-number" type="text" name="" id="" /><span>ريال</span>
-                        <ul class="list-unstyled ul-types">
-                            <li>
-                                <label class="container">
-                  <span class="type-word"><i class="fas fa-comment"></i>مراسلة</span>
-                  <input type="checkbox" checked="checked" />
-                  <span class="checkmark"></span>
-                </label>
-                            </li>
-                            <li>
-                                <label class="container">
-                  <span class="type-word"><i class="fab fa-whatsapp"></i>واتساب</span>
-                  <input type="checkbox" checked="checked" />
-                  <span class="checkmark"></span>
-                </label>
-                            </li>
-                            <li>
-                                <label class="container">
-                  <span class="type-word"><i class="fas fa-mobile"></i>اتصال</span>
-                  <input type="checkbox" checked="checked" />
-                  <span class="checkmark"></span>
-                </label>
-                            </li>
-                        </ul>
-                    </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlSelect1"> الدولة</label>
+                            <select class="form-control" id="exampleFormControlSelect1">
+                <option>السعوديه</option>
+                <option>الامارت</option>
+                <option>البجرين</option>
+                <option>قطر</option>
+                <option>عمان</option>
+              </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlSelect1"> المدينة</label>
+                            <select class="form-control" id="exampleFormControlSelect1">
+                <option>نجران</option>
+              </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">السعر</label>
+                            <input type="text" class="form-control" id="exampleFormControlInput1" value="700" />
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">الجوال</label>
+                            <input type="text" class="form-control" id="exampleFormControlInput1" value="01098586783" />
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlInput1">رابط فيديو يوتيوب</label>
+                            <input type="text" class="form-control" id="exampleFormControlInput1" />
+                        </div>
+                        <div class="form-group">
+                            <label for="exampleFormControlTextarea1">وصف الاعلان</label>
+                            <textarea class="form-control" id="exampleFormControlTextarea1" rows="10">
+بلاي ستيشن فور بحالة الزيرو</textarea>
+                        </div>
+                        <div class="form-group file-upload">
+                            <label for="exampleFormControlFile1">رفع صور الاعلان</label>
+                            <hr />
+                            <input type="file" class="form-control-file" id="exampleFormControlFile1" />
+                        </div>
+                        <div class="img-from-file">
+                            <img src="./assets/images/add-image.jpg" />
+                            <a href="#">حذف</a>
+                        </div>
+                        <div class="submit-button text-center mt-5">
+                            <button class="rounded" type="submit btn">تعديل</button>
+                        </div>
+                    </form>
                 </div>
-                <div class="button-submit">
-                    <button class="btn btn-submit-form" type="submit">نشر</button>
-                </div>
-            </form>
+            </div>
         </div>
     </div>
-    <!-- end uplad ads -->
+    <!-- end edit ads -->
 
     <!-- start footer -->
     <footer class="pt-5 mt-5">
@@ -156,14 +168,10 @@
                             <button>اشترك الان</button>
                         </form>
                         <div class="social">
-                            <span><a href="#"><i class="fab fa-instagram"></i></a
-              ></span>
-                            <span><a href="#"><i class="fab fa-snapchat"></i></a
-              ></span>
-                            <span><a href="#"><i class="fab fa-twitter"></i></a
-              ></span>
-                            <span><a href="#"><i class="fas  fa-envelope"></i></a
-              ></span>
+                            <span><a href="#"><i class="fab fa-instagram"></i></a></span>
+                            <span><a href="#"><i class="fab fa-snapchat"></i></a></span>
+                            <span><a href="#"><i class="fab fa-twitter"></i></a></span>
+                            <span><a href="#"><i class="fas fa-envelope"></i></a></span>
                         </div>
                     </div>
                 </div>
@@ -186,6 +194,7 @@
     <script src="./assets/js/popper.min.js"></script>
     <script src="./assets/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 
