--- a/myads.html
+++ b/myads.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/css/bootstrap-ar.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Document</title>
 </head>
@@ -57,66 +58,76 @@
     </div>
     <!-- end path -->
 
-    <!-- start uplad ads -->
-    <div class="upload-ads">
+    <!-- start my ads -->
+    <div class="my-ads">
         <div class="container">
-            <form action="">
-                <div class="image-upload">
-                    <label class="file-upload" for="file-input">
-            <i class="fas fa-camera"></i>
-            <p id="file-name"></p>
-          </label><br />
-                    <input id="file-input" type="file" />
-                </div>
-                <div class="container">
-                    <div class="descripe-add">
-                        <input name="" id="" class="descripe-ad-input" placeholder="عنوان الاعلان" />
-                    </div>
-                </div>
-                <div class="ad-details">
-                    <div class="container">
-                        <textarea name="" id="" cols="30" rows="6" placeholder="تفاصيل الاعلان"></textarea>
-                        <div class="form-group form-select">
-                            <label for="exampleFormControlSelect1">ما هي الفئة المنسبة لمنتجك؟</label>
-                            <i class="fas fa-calendar"></i>
-                            <select class="form-control" id="exampleFormControlSelect1">
-                <option selected disapled></i>اختر الفئة</option>
-                <option>2</option>
-              </select>
+            <div class="row">
+                <div class="col-sm-12 col-lg-12">
+                    <div class="card card-grow mt-2" style="max-width: 100%;" data-aos="fade-in">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <a href="#">
+                                    <img src="./assets/images/add-image.jpg" width="100%" alt="" />
+                                </a>
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <a href="#">
+                                        <h5 class="card-title" data-aos="zoom-in">
+                                            عنوان الاعلان قابل للتعديل ويمكن تغييره
+                                        </h5>
+                                    </a>
+                                    <span><i class="fas fa-map-marker-alt"></i>المدينة</span><span><i class="fas fa-clock"></i>قبل 3
+                    ساعات</span>
+                                    <div class="controls">
+                                        <div>
+                                            <a href="#" class="btn button-controls">تعديل الاعلان</a>
+                                            <a href="#" class="btn button-controls">حذف</a>
+                                            <a href="#" class="btn button-controls">نحديث</a>
+                                        </div>
+                                        <h4 class="price">700 ريال</h4>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <input class="input-number" type="text" name="" id="" /><span>ريال</span>
-                        <ul class="list-unstyled ul-types">
-                            <li>
-                                <label class="container">
-                  <span class="type-word"><i class="fas fa-comment"></i>مراسلة</span>
-                  <input type="checkbox" checked="checked" />
-                  <span class="checkmark"></span>
-                </label>
-                            </li>
-                            <li>
-                                <label class="container">
-                  <span class="type-word"><i class="fab fa-whatsapp"></i>واتساب</span>
-                  <input type="checkbox" checked="checked" />
-                  <span class="checkmark"></span>
-                </label>
-                            </li>
-                            <li>
-                                <label class="container">
-                  <span class="type-word"><i class="fas fa-mobile"></i>اتصال</span>
-                  <input type="checkbox" checked="checked" />
-                  <span class="checkmark"></span>
-                </label>
-                            </li>
-                        </ul>
                     </div>
                 </div>
-                <div class="button-submit">
-                    <button class="btn btn-submit-form" type="submit">نشر</button>
+                <!-- rebat -->
+                <div class="col-sm-12 col-lg-12">
+                    <div class="card card-grow mt-2" style="max-width: 100%;" data-aos="fade-in">
+                        <div class="row no-gutters">
+                            <div class="col-md-4">
+                                <a href="#">
+                                    <img src="./assets/images/add-image.png" width="100%" alt="" />
+                                </a>
+                            </div>
+                            <div class="col-md-8">
+                                <div class="card-body">
+                                    <a href="#">
+                                        <h5 class="card-title" data-aos="zoom-in">
+                                            عنوان الاعلان قابل للتعديل ويمكن تغييره
+                                        </h5>
+                                    </a>
+                                    <span><i class="fas fa-map-marker-alt"></i>المدينة</span><span><i class="fas fa-clock"></i>قبل 3
+                    ساعات</span>
+                                    <div class="controls">
+                                        <div>
+                                            <a href="#" class="btn button-controls">تعديل الاعلان</a>
+                                            <a href="#" class="btn button-controls">حذف</a>
+                                            <a href="#" class="btn button-controls">نحديث</a>
+                                        </div>
+                                        <h4 class="price">700 ريال</h4>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-            </form>
+            </div>
         </div>
     </div>
-    <!-- end uplad ads -->
+
+    <!-- end my ads -->
 
     <!-- start footer -->
     <footer class="pt-5 mt-5">
@@ -156,14 +167,10 @@
                             <button>اشترك الان</button>
                         </form>
                         <div class="social">
-                            <span><a href="#"><i class="fab fa-instagram"></i></a
-              ></span>
-                            <span><a href="#"><i class="fab fa-snapchat"></i></a
-              ></span>
-                            <span><a href="#"><i class="fab fa-twitter"></i></a
-              ></span>
-                            <span><a href="#"><i class="fas  fa-envelope"></i></a
-              ></span>
+                            <span><a href="#"><i class="fab fa-instagram"></i></a></span>
+                            <span><a href="#"><i class="fab fa-snapchat"></i></a></span>
+                            <span><a href="#"><i class="fab fa-twitter"></i></a></span>
+                            <span><a href="#"><i class="fas  fa-envelope"></i></a></span>
                         </div>
                     </div>
                 </div>
@@ -182,10 +189,13 @@
     </footer>
     <!-- end footer -->
 
+
+
     <script src="./assets/js/jquery-3.3.1.min.js"></script>
     <script src="./assets/js/popper.min.js"></script>
     <script src="./assets/js/bootstrap.min.js"></script>
     <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="./assets/js/main.js"></script>
 </body>
 
