--- a/deparment.html
+++ b/deparment.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./assets/css/bootstrap-ar.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
-  <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
+  <!-- <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" /> -->
+  <link rel="stylesheet" href="./assets/css/slick.css">
+  <link rel="stylesheet" href="./assets/css/slick-theme.css">
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Document</title>
@@ -58,58 +60,125 @@
   </div>
   <!-- end path -->
 
-  <!-- start slider -->
-  <div class="slider-card department-card">
-    <div class="container">
-      <div class="swiper-container swiper-slider-card">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <a href="#" class="active">
-              <div class="card">
-                <img src="./assets/images/home.png" alt="" />
-                <p>اجهزة</p>
-              </div>
-            </a>
-          </div>
-          <div class="swiper-slide">
-            <div class="swiper-slide">
-              <a href="#">
-                <div class="card">
-                  <img src="./assets/images/car.png" alt="" />
-                  <p>اجهزة</p>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="swiper-slide">
-              <a href="#">
-                <div class="card">
-                  <img src="./assets/images/elctron.png" alt="" />
-                  <p>اجهزة</p>
-                </div>
-              </a>
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="swiper-slide">
-              <a href="#">
-                <div class="card">
-                  <img src="./assets/images/elctron.png" alt="" />
-                  <p>اجهزة</p>
-                </div>
-              </a>
-            </div>
-          </div>
+ <!-- start slider -->
+ <div class="slider-card">
+  <div class="container">
+    <div class="slider-department-card" dir="ltr">
+      <div class="slider-item">
+        <div class="card card-department">
+          <img src="./assets/images/elctron.png" alt="">
+          <p>اجهزة</p>
         </div>
-        <!-- Add Arrows -->
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div>
+      </div>
+      <div class="slider-item">
+        <div class="card card-department">
+          <img src="./assets/images/car.png" alt="">
+          <p>سيارات</p>
+        </div>
+      </div>
+      <div class="slider-item">
+        <div class="card card-department">
+          <img src="./assets/images/elctron.png" alt="">
+          <p>اجهزو</p>
+        </div>
+      </div>
+      <div class="slider-item">
+        <div class="card card-department">
+          <img src="./assets/images/home.png" alt="">
+          <p>عقارات</p>
+        </div>
+      </div>
+      <div class="slider-item">
+        <div class="card card-department">
+          <img src="./assets/images/elctron.png" alt="">
+          <p>اجهزة</p>
+        </div>
       </div>
     </div>
   </div>
+</div>
 
-  <!-- end slider -->
+
+<!-- start extra department -->
+
+<div class="extra">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-lg-12">
+        <div class="extra-department shadow" id="extra-slider-0">
+          <i class="fas fa-times close-extra-department"></i>
+          <ul class="list-unstyled">
+            <li><a href="">قسم فرعي سلايد-0</a></li>
+            <li><a href="">قسم فرعي سلايد-0</a></li>
+            <li><a href="">قسم فرعي سلايد-0</a></li>
+            <li><a href="">قسم فرعي سلايد-0</a></li>
+            <li><a href="">قسم فرعي سلايد-0</a></li>
+            <li><a href="">قسم فرعي سلايد-0</a></li>
+            <div class="clear"></div>
+          </ul>
+        </div>
+      </div>
+      <div class="col-sm-12 col-lg-12">
+        <div class="extra-department shadow" id="extra-slider-1">
+          <i class="fas fa-times close-extra-department"></i>
+          <ul class="list-unstyled">
+            <li><a href="">قسم فرعي سلايد-1</a></li>
+            <li><a href="">قسم فرعي سلايد-1</a></li>
+            <li><a href="">قسم فرعي سلايد-1</a></li>
+            <li><a href="">قسم فرعي سلايد-1</a></li>
+            <li><a href="">قسم فرعي سلايد-1</a></li>
+            <li><a href="">قسم فرعي سلايد-1</a></li>
+            <div class="clear"></div>
+          </ul>
+        </div>
+      </div>
+      <div class="col-sm-12 col-lg-12">
+        <div class="extra-department shadow" id="extra-slider-2">
+          <i class="fas fa-times close-extra-department"></i>
+          <ul class="list-unstyled">
+            <li><a href="">قسم فرعي سلايد-2</a></li>
+            <li><a href="">قسم فرعي سلايد-2</a></li>
+            <li><a href="">قسم فرعي سلايد-2</a></li>
+            <li><a href="">قسم فرعي سلايد-2</a></li>
+            <li><a href="">قسم فرعي سلايد-2</a></li>
+            <li><a href="">قسم فرعي سلايد-2</a></li>
+            <div class="clear"></div>
+          </ul>
+        </div>
+      </div>
+      <div class="col-sm-12 col-lg-12">
+        <div class="extra-department shadow" id="extra-slider-3">
+          <i class="fas fa-times close-extra-department"></i>
+          <ul class="list-unstyled">
+            <li><a href="">قسم فرعي سلايد-3</a></li>
+            <li><a href="">قسم فرعي سلايد-3</a></li>
+            <li><a href="">قسم فرعي سلايد-3</a></li>
+            <li><a href="">قسم فرعي سلايد-3</a></li>
+            <li><a href="">قسم فرعي سلايد-3</a></li>
+            <li><a href="">قسم فرعي سلايد-3</a></li>
+            <div class="clear"></div>
+          </ul>
+        </div>
+      </div>
+      <div class="col-sm-12 col-lg-12">
+        <div class="extra-department shadow" id="extra-slider-4">
+          <i class="fas fa-times close-extra-department"></i>
+          <ul class="list-unstyled">
+            <li><a href="">قسم فرعي سلايد-4</a></li>
+            <li><a href="">قسم فرعي سلايد-4</a></li>
+            <li><a href="">قسم فرعي سلايد-4</a></li>
+            <li><a href="">قسم فرعي سلايد-4</a></li>
+            <li><a href="">قسم فرعي سلايد-4</a></li>
+            <li><a href="">قسم فرعي سلايد-4</a></li>
+            <div class="clear"></div>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- end slider -->
 
   <!-- start ads -->
 
@@ -611,8 +680,11 @@
   <script src="./assets/js/jquery-3.3.1.min.js"></script>
   <script src="./assets/js/popper.min.js"></script>
   <script src="./assets/js/bootstrap.min.js"></script>
-  <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
+  <!-- <script src="https://unpkg.com/swiper/js/swiper.min.js"></script> -->
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script src="./assets/js/slick.min.js"></script>
+  <script src="./assets/js/jquery.nicescroll.min.js"></script>
+  <script src="./assets/js/extra-department.js"></script>
   <script src="./assets/js/main.js"></script>
 </body>
 
