--- a/showads.html
+++ b/showads.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="./assets/css/bootstrap-ar.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
   <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" />
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <link rel="stylesheet" href="./assets/css/slick.css" />
+  <link rel="stylesheet" href="./assets/css/slick-theme.css" />
   <link rel="stylesheet" href="./assets/css/style.css" />
   <title>Document</title>
 </head>
@@ -65,7 +68,32 @@
         <span>130.000 ريال</span>
       </div>
       <div class="add-image">
-        <img src="./assets/images/add-image.png" alt="" />
+        <div>
+          <div class="slider-top" dir="ltr">
+            <div class="item-slide image-top" style="background-image: url('./assets/images/add-image.jpg');"></div>
+            <div class="item-slide image-top" style="background-image: url('./assets/images/add-image.png');"></div>
+            <div class="item-slide image-top" style="background-image: url('./assets/images/car-ads.jpg');"></div>
+            <div class="item-slide image-top" style="background-image: url('./assets/images/house.jpg');"></div>
+            <div class="item-slide image-top" style="background-image: url('./assets/images/add-image.png');"></div>
+            <div class="item-slide image-top" style="background-image: url('./assets/images/add-image.jpg');"></div>
+            <div class="item-slide image-top" style="background-image: url('./assets/images/add-image.jpg');"></div>
+            <div class="item-slide image-top" style="background-image: url('./assets/images/add-image.png');"></div>
+            <div class="item-slide image-top" style="background-image: url('./assets/images/add-image.jpg');"></div>
+          </div>
+        </div>
+        <div>
+          <div class="slider-bottom" dir="ltr">
+            <div class="item-slide image-top" style="background-image: url('./assets/images/add-image.jpg');"></div>
+            <div class="item-slide image-top" style="background-image: url('./assets/images/add-image.png');"></div>
+            <div class="item-slide image-top" style="background-image: url('./assets/images/car-ads.jpg');"></div>
+            <div class="item-slide image-top" style="background-image: url('./assets/images/house.jpg');"></div>
+            <div class="item-slide image-top" style="background-image: url('./assets/images/add-image.png');"></div>
+            <div class="item-slide image-top" style="background-image: url('./assets/images/add-image.jpg');"></div>
+            <div class="item-slide image-top" style="background-image: url('./assets/images/add-image.jpg');"></div>
+            <div class="item-slide image-top" style="background-image: url('./assets/images/add-image.png');"></div>
+            <div class="item-slide image-top" style="background-image: url('./assets/images/add-image.jpg');"></div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="container">
@@ -234,7 +262,9 @@
   <script src="./assets/js/popper.min.js"></script>
   <script src="./assets/js/bootstrap.min.js"></script>
   <script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
-  <!-- <script src="./assets/js/comment.js"></script> -->
+  <script src="./assets/js/slick.min.js"></script>
+  <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
