--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="./assets/css/bootstrap-ar.min.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" />
-  <!-- <link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css" /> -->
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link rel="stylesheet" href="./assets/css/slick.css">
   <link rel="stylesheet" href="./assets/css/slick-theme.css">
@@ -215,6 +214,7 @@
             </ul>
           </div>
         </div>
+        <!-- ..عند اضافه سكشن جديد ارجو تعديل اسم  الاي دي بالترقيم مثل م اهو بالاعلي 0 1 2 3 4 5  -->
       </div>
     </div>
   </div>
@@ -724,7 +724,6 @@
   <script src="./assets/js/jquery-3.3.1.min.js"></script>
   <script src="./assets/js/popper.min.js"></script>
   <script src="./assets/js/bootstrap.min.js"></script>
-  <!-- <script src="https://unpkg.com/swiper/js/swiper.min.js"></script> -->
   <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script src="./assets/js/slick.min.js"></script>
   <script src="./assets/js/jquery.nicescroll.min.js"></script>
